--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>
     <div class="wrapper">
         <h1>Совершество.</h1>
-        <h2>Совершенство это когда нечего добавть, или когла нечего убрать?</h2>
+        <h2>Совершенство это когда нечего добавить, или когда нечего убрать?</h2>
         <p>
              Каждый из нас хоть раз в жизни задавался вопросом <em> <strong>что есть такое совершенство?</em> </strong>
         </p>
         <p>
             На эту темы писали много стихов, проз, статей, ставили 
-            пьессы и мюзиклы, лучшие умы мира размышляли над столь важной для каждый души темы.
+            пьессы и мюзиклы, лучшие умы мира размышляли над столь важной для каждый души темой.
             Но в гонке за ответом, нам нужна пауза. А пауза нашего пребывания на планете и есть смерть. Как следствие - вывод: 
             <strong><em>Совершенство это оставновка в эволюции!</em></strong>.
         </p>
 
-        <a href="https://ya.ru/" target="_blank">Если нет веры в важность вопроса, Спросите у Яндекса</a>
+        <a href="https://ya.ru/" target="_blank">Если нет веры в важности вопроса, Спросите у Яндекса</a>
         <hr>
-        <img src="https://mykaleidoscope.ru/x/uploads/posts/2022-10/1666152946_46-mykaleidoscope-ru-p-otkritki-tsarstvie-nebesnoe-oboi-51.jpg" width="1200" height="900" alt="Облако"
-        <p class="big_text"><br> Если нам нечего добавить в нашу жизнь, то душа с легкостью сливается с Абсолютом.</br> </p>
-        <img src="Img/1.jpeg" width="1200" height="900" alt="Лестница">
-        <p class="big_text">Но пока мы ищем себя, экспериментируем, добавляем, убираем - мы живем. 
-        Пусть и несовершенную жизнь.Но вкусную во всех реалиях</p>
+        <img src="https://mykaleidoscope.ru/x/uploads/posts/2022-10/1666152946_46-mykaleidoscope-ru-p-otkritki-tsarstvie-nebesnoe-oboi-51.jpg" width="600" height="450" alt="Облако">
+        <p class="big_text"> <br> Если нам нечего добавить в нашу жизнь, то душа с легкостью сливается с Абсолютом.</br> </p>
+        <img src="Img/1.jpeg" width="600" height="450" alt="Лестница">
+        <p class="big_text"> <br> Но пока мы ищем себя, экспериментируем, добавляем, убираем - мы живем. 
+        Пусть и несовершенную жизнь. Но вкусную во всех реалиях</br> </p>
         <h3>И как приятный бонус предлагаю к вашему вниманию интересные цитаты:</h3>
         <ul>
             <li>То что достигло совершенства, уже нельзя улучшить — но всегда можно изуродовать.
@@ -39,11 +39,11 @@
                 Чтоб быть к Вам абсолютно равнодушным
                 © просто Василий</li>
         </ul>
-        <h3>Помимо садостных размышлений на тему совершенства,
-             предлагаю к вниманию не менее важные вопросы для осознания себя:</h3>
+        <h3>Помимо сладостных размышлений на тему совершенства,
+             рассмотрите не менее важные вопросы для осознания себя:</h3>
         <ol>
             <li>Что ты выберешь, умереть человеком или жить монстром?</li>
-            <li>Непрожитая жизнь не стоит того чтобы ее исследовать или неисследованная жизнь не стоит того чтобы ее прожить?</li>
+            <li>Не прожитая жизнь не стоит того чтобы ее исследовать или не исследованная жизнь не стоит того чтобы ее прожить?</li>
             <li>В чем проявляется связь между Божеством, нашим телом и умом?</li>
         </ol>
     </div>
